@@ -134,6 +134,14 @@ newprog(Prog *p, Modlink *m)
 	Osenv *on, *op;
 	static int pidnum;
 
+	if(p != nil){
+		if(p->group != nil)
+			p->flags |= p->group->flags & Pkilled;
+		if(p->kill != nil)
+			error(p->kill);
+		if(p->flags & Pkilled)
+			error("");
+	}
 	n = malloc(sizeof(Prog)+sizeof(Osenv));
 	if(n == 0){
 		if(p == nil)
@@ -564,20 +572,26 @@ killgrp(Prog *p, char *msg)
 	g = p->group;
 	if(g == nil || g->head == nil)
 		return 0;
+	while(g->flags & Pkilled){
+		release();
+		acquire();
+	}
 	npid = 0;
 	for(f = g->head; f != nil; f = f->grpnext)
 		if(f->group != g)
 			panic("killgrp");
 		else
 			npid++;
-	/* use pids not Prog* because state can change during killprog */
+	/* use pids not Prog* because state can change during killprog (eg, in delprog) */
 	pids = malloc(npid*sizeof(int));
 	if(pids == nil)
 		error(Enomem);
 	npid = 0;
 	for(f = g->head; f != nil; f = f->grpnext)
 		pids[npid++] = f->pid;
+	g->flags |= Pkilled;
 	if(waserror()) {
+		g->flags &= ~Pkilled;
 		free(pids);
 		nexterror();
 	}
@@ -587,6 +601,7 @@ killgrp(Prog *p, char *msg)
 			killprog(f, msg);
 	}
 	poperror();
+	g->flags &= ~Pkilled;
 	free(pids);
 	return 1;
 }
