@@ -1,6 +1,8 @@
+20081106
+	os/port/dis.c prevent new spawns during killgrp
+	also synchronise two killgrps of the same group
 20081105
-	emu/port/dis.c change to killgrp to prevent new spawns during kill [#117]
-	(will do os/port/dis.c later)
+	emu/port/dis.c prevent new spawns during killgrp [#117]
 20081022
 	sh: ignore leading white space in fail: strings, and change empty tail to "failed"
 	/emu/port/devfs-posix.c don't call readdir after it has returned end of file
